--- a/templates/quiz/aboutus.html
+++ b/templates/quiz/aboutus.html
@@ -37,9 +37,11 @@
   </center>
   <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     
-    <p class="lead"> Welcome to Lets' make with Shubham. <br> We provide a platform to organize quiz</p>
+    <p class="lead"> Welcome to LifyJobs <br> See your required details.
+</p>
+    <p> We provide aspirants to land into their dream job.</p>
     <hr class="my-4">
-    <p>Explore our Website.</p>
+    <p>Want to know us more? then, Explore our Website.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/" role="button">HOME</a>
     </p>
