--- a/templates/quiz/admin_dashboard.html
+++ b/templates/quiz/admin_dashboard.html
@@ -44,13 +44,14 @@
     </style>
   </head>
 <br><br>
+ <h1 align="center"> Jobs listed below with deadlines mentioned. </h1> <br><br>
 
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="admin-view-student" style="text-decoration: none;color:white;">Total Students</a> </h6>
+            <h6 class="m-b-20"> <a href="admin-view-student" style="text-decoration: none;color:white;">SOFTWARE ENGINEER <br> <br>  Deadline- less than 3 days left! Register now. </a> </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_student}}</span></h2>
             
           </div>
@@ -60,9 +61,19 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-green order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="admin-view-teacher" style="text-decoration: none;color:white;">Total Teacher</a> </h6>
-            <h2 class="text-right"><i class="fas fa-chalkboard-teacher f-left"></i><span>{{total_teacher}}</span></h2>
+            <h6 class="m-b-20"><a href="admin-view-teacher" style="text-decoration: none;color:white;">Data Analytics <br> <br> Deadline- Last date soon to be announced. </a> </h6>
+            <h2 class="text-right"><i class="fas fa-chalkboard-teacher f-left"></i><span>{{total_student}}</span></h2>
             
+          </div>
+        </div>
+      </div>
+
+       <div class="col-md-4 col-xl-3">
+        <div class="card bg-warning">
+          <div class="card-block">
+            <h6 class="m-b-20"><a href="admin-view-teacher" style="text-decoration: none;color:white;">UX/ UI Developer <br> <br>  Deadline- less than 14 days left! Register now.</a> </h6>
+            <h2 class="text-right"><i class="fas fa-chalkboard-teacher f-left"></i><span>{{total_teacher}}</span></h2>
+
           </div>
         </div>
       </div>
@@ -70,7 +81,7 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="admin-view-course" style="text-decoration: none;color:white;">Total Courses</a></h6>
+            <h6 class="m-b-20"><a href="admin-view-course" style="text-decoration: none;color:white;">Test Engineer <br> <br>  Deadline- less than 21 days left! Register now.</a></h6>
            <h2 class="text-right"><i class="fas fa-book f-left"></i><span>{{total_course}}</span></h2>
             
           </div>
@@ -80,13 +91,23 @@
       <div class="col-md-4 col-xl-3">
         <div class="card bg-c-pink order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="admin-view-question" style="text-decoration: none;color:white;">Total Questions</a></h6>
+            <h6 class="m-b-20"><a href="admin-view-question" style="text-decoration: none;color:white;">Business Analyst <br> <br>  Deadline- less than 30 days left! Register now.</a></h6>
             <h2 class="text-right"><i class="fas fa-question-circle f-left"></i><span>{{total_question}}</span></h2>
+
+
             
           </div>
         </div>
       </div>
 
+      <div class="col-md-4 col-xl-3">
+        <div class="card bg-info">
+          <div class="card-block">
+            <h6 class="m-b-20"><a href="admin-view-question" style="text-decoration: none;color:white;">Product Operation <br> <br>   Register closed!!!</a></h6>
+            <h2 class="text-right"><i class="fas fa-question-circle f-left"></i><span>{{total_question}}</span></h2>
+        </div>
+        </div>
+      </div>
       
     </div>
   </div>
