--- a/templates/quiz/admin_teacher.html
+++ b/templates/quiz/admin_teacher.html
@@ -45,7 +45,7 @@
       <div class="col-md-4 col-xl-4">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="admin-view-teacher" style="text-decoration: none;color:white;">Total Teacher</a> </h6>
+            <h6 class="m-b-20"> <a href="admin-view-teacher" style="text-decoration: none;color:white;">Total Jobs posted -6 </a> </h6>
             <h2 class="text-right"><i class="fas fa-chalkboard-teacher f-left"></i><span>{{total_teacher}}</span></h2>
             
           </div>
