--- a/templates/quiz/admin_view_teacher.html
+++ b/templates/quiz/admin_view_teacher.html
@@ -25,7 +25,7 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6>Teachers</h6>
+      <h6>Details</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
