--- a/templates/quiz/adminlogin.html
+++ b/templates/quiz/adminlogin.html
@@ -75,7 +75,7 @@
             <div class="card">
                 <form class="box" method="post">
                     {% csrf_token %}
-                    <h2 style="background-color:powderblue;">Welcome to <br> Let's make with Shubham</h2>
+                    <h2 style="background-color:powderblue;">Welcome to LifyJob</h2>
                     <h1>Admin Login</h1>
                     <p class="text-muted"> Please enter your login and password!</p>
 
