--- a/templates/quiz/index.html
+++ b/templates/quiz/index.html
@@ -7,7 +7,10 @@
     margin-bottom: 0px;
     color: white;
     background-image:url("https://images.pexels.com/photos/716398/pexels-photo-716398.jpeg?cs=srgb&dl=pexels-rahul-716398.jpg&fm=jpg");
-  background-size: 999px;
+  background-size: 1150px;
+  height: 100%;
+  width:100%;
+
   }
 
 </style>
@@ -17,18 +20,20 @@
 
 <section id="section-jumbotron" class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center">
   <div class="container text-center">
-    <h1 class="display-1 text-info">Welcome to <br> Let's make with Shubham</h1>
-    <p class="lead">We organize quizzes on various topics.<br> <hr color="white"> <h2> Who are you? Login according to your designation </h2></p>
+    <h1 class="display-1 text-info">Welcome to <br> Job Portal </h1>
+    <p class="lead">See your required details.<br> <hr color="white"> <h2> Who are you? Terraformers or a job seeker? </h2></p>
  <div>
-         <a href="/student/studentclick" class="btn btn-primary">Student</a>
-     <a href="/adminclick" class="btn btn-primary">Teachers/Admin</a> </div>
+         <a href="/student/studentclick" class="btn btn-primary">Registered Applicant</a>
 <br><br>
+
+      <a href="/adminclick" class="btn btn-primary">Terraformers</a>
+ </div><br><br><br><br>
     <p class="basic">Hi, Are you a new User? <br> Want to move further!!!!</br><br> </br></p>
 
-    <h2><strong> Start Your Journey Here: <br><br> To create your account,<br> click on the following buttons according to your designation</strong></h2>
+    <h2><strong> Start Your Journey Here: <br><br> To create your account,<br> </strong></h2>
 
 
-    <a class="btn btn-success btn-lg"  href="/student/studentsignup" class="btn btn-success" class="btn btn-primary btn-sm" style="padding-right: 35px;"><i class="fa fa-user-plus" aria-hidden="true"></i> Students</a>
+    <a class="btn btn-success btn-lg"  href="/student/studentsignup" class="btn btn-success" class="btn btn-primary btn-sm" style="padding-right: 35px;"><i class="fa fa-user-plus" aria-hidden="true"></i> Click here</a>
 
   </div>  
 </section>
