--- a/templates/student/studentbase.html
+++ b/templates/student/studentbase.html
@@ -25,12 +25,12 @@
       z-index: 1;
     }
 
-    .left_area h3 {
+    .left_area h4 {
       color: #fff;
-      margin: 0px;
+      margin: -3px;
       text-transform: uppercase;
-      font-size: 22px;
-      font-weight: 900;
+      font-size: 16px;
+      font-weight: 1000;
     }
 
     .left_area span {
@@ -164,7 +164,7 @@
       <i style="left: 200px;margin-top: 17px;"class="fas fa-bars" id="sidebar_btn"></i>
     </label>
     <div class="left_area">
-      <h3>Online Quiz</h3>
+      <h4>Applicant Portal</h4>
     </div>
     <div class="right_area">
       <a href="/logout" class="logout_btn">Logout</a>
@@ -182,8 +182,8 @@
     </center>
 
     <a href="/student/student-dashboard"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
-    <a href="/student/student-exam"><i class="fas fa-book"></i><span>Exam</span></a>
-    <a href="/student/student-marks"><i class="fas fa-sort-numeric-up"></i><span>Marks</span></a>
+    <a href="/student/student-exam"><i class="fas fa-book"></i><span>Jobs</span></a>
+    <a href="/student/student-marks"><i class="fas fa-sort-numeric-up"></i><span></span></a>
   </div>
   <!--sidebar end-->
 
