--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -29,9 +29,9 @@
   <br><br>
 
   <div class="jumbotron" style="margin-bottom:0px;">
-    <h1 class="display-1 text-info">Welcome to Let's make with Shubham</h1><hr color="white">
-    <h1 class="display-4" ><b><u>Hello, Student</u></b></h1>
-    <p class="lead">Welcome to Student's Login page</p>
+    <h1 class="display-1 text-info">Welcome to LifyJobs</h1><hr color="white">
+    <h1 class="display-4" ><b><u>Hello, User</u></b></h1>
+    <p class="lead">Welcome to Login page</p>
     <hr class="my-4">
     <p>You can access various features after Login.</p>
     <p class="lead">
