--- a/templates/quiz/admin_course.html
+++ b/templates/quiz/admin_course.html
@@ -43,7 +43,7 @@
       <div class="col-md-4 col-xl-6">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> <a href="admin-add-course" style="text-decoration: none;color:white;">Add Course</a> </h6>
+            <h6 class="m-b-20"> <a href="admin-add-course" style="text-decoration: none;color:white;">Add New Job </a> </h6>
             <h2 class="text-right"><i class="fas fa-plus f-left"></i></h2>
           </div>
         </div>
@@ -52,7 +52,7 @@
       <div class="col-md-4 col-xl-6">
         <div class="card bg-c-green order-card">
           <div class="card-block">
-            <h6 class="m-b-20"><a href="admin-view-course" style="text-decoration: none;color:white;">View Course</a> </h6>
+            <h6 class="m-b-20"><a href="admin-view-course" style="text-decoration: none;color:white;">View Posted Job </a> </h6>
             <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
             
           </div>
