--- a/templates/quiz/admin_view_course.html
+++ b/templates/quiz/admin_view_course.html
@@ -25,15 +25,15 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6>Courses</h6>
+      <h6>Details</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
 
-          <th>Course Name</th>
-          <th>Total Question</th>
-          <th>Total Marks</th>
+          <th>Position Name</th>
+          <th>Total Positions</th>
+          <th>Job Description</th>
           <th>Delete</th>
         </tr>
       </thead>
