--- a/templates/quiz/adminbase.html
+++ b/templates/quiz/adminbase.html
@@ -20,11 +20,11 @@
 
     }
 
-    .left_area h3 {
+    .left_area h4 {
       color: white;
       margin: 0px;
       text-transform: uppercase;
-      font-size: 22px;
+      font-size: 18px;
       font-weight: 900;
     }
 
@@ -157,7 +157,7 @@
       <i style="left: 200px;margin-top: 17px;"class="fas fa-bars" id="sidebar_btn"></i>
     </label>
     <div class="left_area">
-      <h3>Online Quiz</h3>
+      <h4>Admin Job Portal</h4>
     </div>
     <div class="right_area">
       <a href="/logout" class="logout_btn">Logout</a>
@@ -174,10 +174,10 @@
     </center>
 
     <a href="/admin-dashboard"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
-    <a href="/admin-teacher"><i class="fas fa-chalkboard-teacher"></i><span>Teacher</span></a>
-    <a href="/admin-student"><i class="fas fa-user-graduate"></i><span>Student</span></a>
-    <a href="/admin-course"><i class="fas fa-book"></i><span>Courses</span></a>
-    <a href="/admin-question"><i class="fas fa-question-circle"></i><span>Questions</span></a>
+    <a href="/admin-teacher"><i class="fas fa-chalkboard-teacher"></i><span>Total Posted Jobs</span></a>
+    <a href="/admin-student"><i class="fas fa-user-graduate"></i><span>Views of Posted Jobs</span></a>
+    <a href="/admin-course"><i class="fas fa-book"></i><span>Add new Job</span></a>
+    <a href="/admin-question"><i class="fas fa-question-circle"></i><span>Questions asked by applicant</span></a>
     
 
 
