--- a/templates/quiz/navbar.html
+++ b/templates/quiz/navbar.html
@@ -32,7 +32,7 @@
 
   <div class="bs-example">
     <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background-color: #000000;">
-    <a style="color: #ffffff;text-decoration: none; " href="/"><font face = "Comic sans MS" size =" 5"> Shubh-mania</font><br /></a>
+    <a style="color: #ffffff;text-decoration: none; " href="/"><font face = "Comic sans MS" size =" 5"> LifyJobs</font><br /></a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
