--- a/templates/student/studentlogin.html
+++ b/templates/student/studentlogin.html
@@ -78,8 +78,8 @@
                 <form class="box" method="post">
                     {% csrf_token %}
 
-     <h2 style="background-color:powderblue;">Welcome to <br> "Let's make with Shubham" </h2>
-                    <h1>Student Login</h1>
+     <h2 style="background-color:powderblue;">Welcome to LifyJobs </h2>
+                    <h1>Login Here</h1>
                     <p class="text-muted"> Please enter your login and password!</p>
 
                      {% render_field form.username class="form-control" placeholder="Username" %}
