--- a/templates/student/studentsignup.html
+++ b/templates/student/studentsignup.html
@@ -18,7 +18,7 @@
 
 
 <br><br><br>
-<h3 style="text-align: center;color: red;">STUDENT SIGNUP</h3>
+<h3 style="text-align: center;color: red;">Create account by completing the required fields!</h3>
 <form method="POST" autocomplete="off" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-row">
